findPrevious(), findNext(), splitters

--- a/diffdialog.ui
+++ b/diffdialog.ui
@@ -23,70 +23,115 @@
       <attribute name="title">
        <string>Compared files</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout">
+      <layout class="QVBoxLayout" name="verticalLayout_6">
        <item>
-        <widget class="QTextEdit" name="textEdit">
-         <property name="font">
-          <font>
-           <family>Courier 10 Pitch</family>
-          </font>
+        <widget class="QSplitter" name="splitter_2">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
          </property>
-         <property name="lineWrapMode">
-          <enum>QTextEdit::NoWrap</enum>
-         </property>
-         <property name="readOnly">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
-         <item>
-          <widget class="QTableView" name="tableView"/>
-         </item>
-         <item>
-          <widget class="QTableView" name="tableView_2"/>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_5">
-         <item>
-          <widget class="QLineEdit" name="lineEdit">
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout">
+         <widget class="QWidget" name="">
+          <layout class="QVBoxLayout" name="verticalLayout">
            <item>
-            <widget class="QRadioButton" name="radioTPButton">
-             <property name="text">
-              <string>TP</string>
+            <widget class="QTextEdit" name="textEdit">
+             <property name="font">
+              <font>
+               <family>Courier 10 Pitch</family>
+              </font>
              </property>
-             <property name="checked">
-              <bool>true</bool>
+             <property name="lineWrapMode">
+              <enum>QTextEdit::NoWrap</enum>
+             </property>
+             <property name="readOnly">
+              <bool>false</bool>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QRadioButton" name="radioFPButton">
-             <property name="text">
-              <string>FP</string>
-             </property>
-            </widget>
+            <layout class="QHBoxLayout" name="horizontalLayout_6">
+             <item>
+              <widget class="QPushButton" name="findPreviousButton">
+               <property name="text">
+                <string>^</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="findNextButton">
+               <property name="text">
+                <string>v</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
            </item>
           </layout>
-         </item>
-         <item>
-          <widget class="QPushButton" name="connectButton">
-           <property name="text">
-            <string>Connect</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+         </widget>
+         <widget class="QWidget" name="">
+          <layout class="QVBoxLayout" name="verticalLayout_5">
+           <item>
+            <widget class="QSplitter" name="splitter">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <widget class="QTableView" name="tableView"/>
+             <widget class="QTableView" name="tableView_2"/>
+            </widget>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_5">
+             <item>
+              <widget class="QLineEdit" name="lineEdit">
+               <property name="text">
+                <string/>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout">
+               <item>
+                <widget class="QRadioButton" name="radioTPButton">
+                 <property name="text">
+                  <string>TP</string>
+                 </property>
+                 <property name="checked">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QRadioButton" name="radioFPButton">
+                 <property name="text">
+                  <string>FP</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <widget class="QPushButton" name="connectButton">
+               <property name="text">
+                <string>Connect</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </widget>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -181,5 +226,41 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>findPreviousButton</sender>
+   <signal>clicked()</signal>
+   <receiver>diffDialog</receiver>
+   <slot>findPrevious()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>41</x>
+     <y>260</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>6</x>
+     <y>229</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>findNextButton</sender>
+   <signal>clicked()</signal>
+   <receiver>diffDialog</receiver>
+   <slot>findNext()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>122</x>
+     <y>256</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>4</x>
+     <y>262</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
+ <slots>
+  <slot>findPrevious()</slot>
+  <slot>findNext()</slot>
+ </slots>
 </ui>
