Squashed commit of the following:
commit 18c76b30d9d24053584289b2e23e828f8d6122bd
Author: johcro <johan.crone@evidente.se>
Date:   Wed Dec 7 15:03:23 2016 +0100

    Minor text format changes

commit e27cad890e8dd36c343cdf97e062c250aa87afff
Merge: 4aef8b5 b55b0a2
Author: johcro <johan.crone@evidente.se>
Date:   Wed Dec 7 14:35:59 2016 +0100

    Merge branch 'master' into excelexport

commit 4aef8b55be28e24afa69749bdc9b623fd7c82762
Author: johcro <johan.crone@evidente.se>
Date:   Wed Dec 7 13:43:33 2016 +0100

    Added possibility to choose export to excel and minor regexp-fix

--- a/diffdialog.ui
+++ b/diffdialog.ui
@@ -29,7 +29,7 @@
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <widget class="QWidget" name="layoutWidget">
+         <widget class="QWidget" name="">
           <layout class="QVBoxLayout" name="verticalLayout">
            <item>
             <widget class="QTextEdit" name="textEdit">
@@ -79,7 +79,7 @@
            </item>
           </layout>
          </widget>
-         <widget class="QWidget" name="layoutWidget">
+         <widget class="QWidget" name="">
           <layout class="QVBoxLayout" name="verticalLayout_5">
            <item>
             <widget class="QSplitter" name="splitter">
