--- a/exportdialog.ui
+++ b/exportdialog.ui
@@ -103,6 +103,13 @@
         </spacer>
        </item>
        <item>
+        <widget class="QCheckBox" name="checkBox">
+         <property name="text">
+          <string>Export for Excel</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="pushButton">
          <property name="text">
           <string>Save</string>
